--- a/src/Components/MoviesGrid/MoviesGrid.css
+++ b/src/Components/MoviesGrid/MoviesGrid.css
@@ -4,3 +4,60 @@
     justify-content: space-between;
     align-items: center;
     }
+    /* Estilo general */
+body {
+    margin: 0;
+    font-family: 'Arial', sans-serif;
+    background-color: #656262;
+    color: #e0e0e0;
+  }
+  
+  main {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+  /* Header negro */
+  header {
+    background-color: #000;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  header h1 {
+    color: #ff4757;
+    font-size: 36px;
+    margin: 0;
+  }
+  
+  /* Títulos */
+  h2 {
+    font-size: 28px;
+    color: #ff6b6b;
+    margin-bottom: 20px;
+  }
+  
+  /* Botones */
+  button {
+    display: inline-block;
+    background-color: #111010;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    margin-top: 10px;
+  }
+  
+  button:hover {
+    background-color: #ff4757;
+    transform: translateY(-3px);
+  }
+  
+  /* Grid de películas */
+
+  
+      
