--- a/src/Components/MovieCard/MovieCard.css
+++ b/src/Components/MovieCard/MovieCard.css
@@ -33,11 +33,12 @@ box-shadow: 0rem 0rem 10px 8px rgb(58 59 69 / 25%);
     color: blue;
     text-align: right;
 }
-.delete {
-    color: red;
-    text-align: right;
-}
+
 .more:hover {
     text-decoration: underline;
     cursor: pointer;
+}
+.texto {
+    text-decoration: none;
+    color: rgb(11, 11, 11);
 }
