--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,10 @@
-.link {
-    text-decoration: none;
+.filter{
+    margin-top: 20px;
+    border: solid 1px var(--light-gray);
+    display: block;
+    width: 30%;
+    padding: 7px 35px 7px 7px;
+    border-radius: 3px;
+    height: 25px;
+    font-size: 1.5em;
 }
