--- a/src/Components/SearchForm/SearchForm.css
+++ b/src/Components/SearchForm/SearchForm.css
@@ -1,3 +1,4 @@
+
 .search-form_input {
     border: solid 1px var(--light-gray);
     display: block;
@@ -6,6 +7,8 @@
     border-radius: 3px;
     height: 25px;
     font-size: 1.5em;
+    margin-top: 20px;
+    margin-left: 20px;
   }
   
   .search-form_button {
@@ -16,4 +19,5 @@
     border-left: solid 1px var(--light-gray);
     color: var(--gray);
     cursor: pointer;
+    margin-left: 20px;
   }
