--- a/src/Components/SearchForm/SearchForm.css
+++ b/src/Components/SearchForm/SearchForm.css
@@ -1,23 +1,16 @@
-
 .search-form_input {
-    border: solid 1px var(--light-gray);
-    display: block;
-    width: 30%;
-    padding: 7px 35px 7px 7px;
-    border-radius: 3px;
-    height: 25px;
-    font-size: 1.5em;
-    margin-top: 20px;
-    margin-left: 20px;
-  }
-  
-  .search-form_button {
-    right: 2px;
-    height: 30%;
-    background-color: #080808;
-    border: none;
-    border-left: solid 1px var(--light-gray);
-    color: var(--gray);
-    cursor: pointer;
-    margin-left: 20px;
-  }
+  border: solid;
+  width: 30%;
+  padding: 7px 35px 7px 7px;
+  border-radius: 3px;
+  height: 25px;
+  font-size: 1em;
+  margin-top: 20px;
+  margin-left: 30%;
+}
+
+.search-form_button {
+  height: 30%;
+  background-color: #080808;
+  margin: 0%;
+}
