--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,9 @@
 .filter{
     margin-top: 20px;
-    border: solid 1px var(--light-gray);
-    display: block;
+    margin-left: 30%;
     width: 30%;
     padding: 7px 35px 7px 7px;
     border-radius: 3px;
     height: 25px;
-    font-size: 1.5em;
+    font-size: 1em;
 }
