--- a/src/Components/MovieCard/MovieCard.css
+++ b/src/Components/MovieCard/MovieCard.css
@@ -44,3 +44,10 @@ box-shadow: 0rem 0rem 10px 8px rgb(58 59 69 / 25%);
     text-decoration: none;
     color: rgb(11, 11, 11);
 }
+.titulo {
+    text-decoration: none;
+    color: black;
+}
+.verDescripcion {
+margin: 0;
+}
