--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,24 +1,84 @@
-nav{
+nav {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-between; 
+    align-items: center;    
+    height: 100px;  
     background-color: black;
+    padding: 0 20px;
 }
 
 nav ul {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    margin: 0;
+    padding: 0;
+    list-style: none; 
 }
 
-.main-nav li{
+.main-nav li {
     margin: 0 10px;
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     text-decoration: none;
+    color: white;
 }
 
-.main-nav li:first-child {
-    font-weight: bold;
+.imagen {
+    max-width: 15%; 
+    height: 130px;
+    margin-right: 650px;
+}
+
+@media screen and (max-width: 1200px) {
+    nav {
+        justify-content: space-around; 
+        padding: 0 15px; 
+    }
+
+    .imagen {
+        max-width: 20%; 
+        margin-right: 0;
+    }
+
+    nav ul {
+        justify-content: flex-start; 
+    }
+
+    .main-nav li {
+        margin: 0 8px; 
+    }
+}
+
+
+
+@media screen and (max-width: 768px) {
+    nav {
+        flex-direction: column; 
+        height: auto; 
+    }
+
+    nav ul {
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+
+    .imagen {
+        max-width: 50%;
+        margin: 0 auto;
+
+    }
+}
+
+
+@media screen and (max-width: 480px) {
+    .imagen {
+        max-width: 70%; 
+        margin: 0 auto;
+
+    }
+
+    .main-nav li {
+        margin: 0 5px;
+    }
 }
