--- a/src/Components/MovieSingle/MovieSingle.css
+++ b/src/Components/MovieSingle/MovieSingle.css
@@ -3,7 +3,9 @@ p{
     font-size: 18px;
 }
 
-
+img{
+    margin-top: 5px;
+}
 
 h2{
     font-size: 70px;
@@ -24,3 +26,33 @@ h2{
     color: black;
     font-size: 18px;
 }
+
+@media (max-width: 1100px) {
+    h2 {
+        font-size: 40px; 
+    }
+  
+    p {
+        font-size: 14px; 
+        padding: 8px 16px;
+    }
+  
+    .movie-genres {
+        font-size: 14px;
+    }
+  }
+  
+  @media (max-width: 855px) {
+    .movie-single {
+        display: flex;
+        flex-direction: column;
+    
+    }
+    
+    .movie-img{
+        align-self: center;
+        width: 100%;
+        
+    }
+  }
+  
